...
            />
          </UI.Clickable>
        </UI.Block>
        {children}
        <UI.Spacer medium />
        <UI.Block center>
          <UI.Text bold>Enter your PIN</UI.Text>
          <UI.Spacer />
          <PinInput value={value} length={4} password cellStyle={styles.cell} />
        </UI.Block>

        <UI.Spacer large />

        <UI.Block row justify="space-between">
          <UI.Clickable
            testID="one"
            onClick={() => this.handleValueChange('1')}>
            <UI.Block
              center
              middle
              backgroundColor={colors.white}
              style={[styles.keypad]}>
              <UI.Text h2>1</UI.Text>
            </UI.Block>
          </UI.Clickable>
          <UI.Clickable
            testID="two"
            onClick={() => this.handleValueChange('2')}>
            <UI.Block
              center
              middle
              backgroundColor={colors.white}
              style={[styles.keypad]}>
              <UI.Text h2>2</UI.Text>
            </UI.Block>
          </UI.Clickable>
          <UI.Clickable
            testID="three"
            onClick={() => this.handleValueChange('3')}>
            <UI.Block
              center
              middle
              backgroundColor={colors.white}
              style={[styles.keypad]}>
...
            </UI.Block>
          </UI.Clickable>
        </UI.Block>

        <UI.Block row justify="space-between">
          <UI.Clickable
            testID="four"
            onClick={() => this.handleValueChange('4')}>
            <UI.Block
              center
              middle
              backgroundColor={colors.white}
              style={[styles.keypad]}>
...
        </UI.Block>

        {showButton && (
          <>
            <UI.Spacer />
            <UI.Button
              testID="confirm_button"
              primary
              onClick={onFinish ? () => onFinish(value) : undefined}>
              <UI.Text color={colors.white} bold>
                CONFIRM
              </UI.Text>
            </UI.Button>
...
