...
        {!isKeyboardOpen && (
          <>
            <UI.Block row middle>
              <UI.Text>Not you?</UI.Text>
              <UI.Spacer size={3} />
              <UI.Link
                testID="switch_account_link"
                onClick={handleSwitchAccount}>
                Switch Account
              </UI.Link>
            </UI.Block>

            <UI.Spacer medium />
...
