...

        <UI.Spacer medium />

        {!isKeyboardOpen && (
          <>
            <UI.Block row middle>
              <UI.Text>Already have an account?</UI.Text>
              <UI.Spacer size={3} />
              <UI.Link
                testID="login_link"
                onClick={() => navigation.replace('Login')}>
                Login
              </UI.Link>
...
